test/files/run/t5655.check

scala> object x { def x={} }
defined object x

scala> import x._
import x._

scala> x
<console>:16: error: reference to x is ambiguous;
it is imported twice in the same scope by
import x._
and import x
       x
       ^

scala> x
<console>:16: error: reference to x is ambiguous;
it is imported twice in the same scope by
import x._
and import x
       x
       ^

scala> :quit
